# ESP32_digital_scale

./: .gitignore  ARTICLE.md  CMakeLists.txt  ESP32_digital_scale.code-workspace  FLOWCHART.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/hx711/: CMakeLists.txt  hx711.c
components/hx711/include/: hx711.h
docs/: HX711_README.md
main/: CMakeLists.txt  calibration.c  calibration.h  main.c  scale_config.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
tools/: ESP32_digital_scale.CoolTermSettings  process-size.ps1
