idf_component_register(
    SRCS
        "main.c"
        "calibration.c"
        "wifi_manager.c"
        "web_server.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        hx711
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        cjson
        driver
        freertos
        log
        esp_timer
        lwip
)
